fixed font size on mobile

--- a/style.css
+++ b/style.css
@@ -135,9 +135,10 @@ h2
 	}
 	h1 {
 		font-size: 150%;
+		margin-top: 8%;
 	}
 	h2 {
-		font-size: 190%;
+		font-size: 90%;
 	}
 	#tradutor {
 		position: static;
